--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | QR code component</title>
@@ -16,21 +15,9 @@
 
   <div class="container">
     <img src="img/image-qr-code.png" alt="QR Code" width="288">
-    <h1>Improve your front-end skills by building projects</h1> 
+    <p class="heading">Improve your front-end skills by building projects</p> 
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
-
-
-
-
-  
-
-  
-  
-
-
-
-
 
   <div class="attribution">
    <div> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
