--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
 
-  <div class="container">
+  <main class="container">
     <img src="img/image-qr-code.png" alt="QR Code" width="288">
     <p class="heading">Improve your front-end skills by building projects</p> 
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  </main>
 
-  <div class="attribution">
+  <footer class="attribution">
    <div> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/IngridaKvet">IngridaKvet</a></div>
-  </div>
+   </footer>
 </body>
 </html>
