--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main class="container">
     <img src="img/image-qr-code.png" alt="QR Code" width="288">
-    <p class="heading">Improve your front-end skills by building projects</p> 
+    <h1>Improve your front-end skills by building projects</h1> 
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
 
